syntax = "proto3";

package synchronize;


service ServerSync {
  rpc MsgSync (MsgRequest) returns (CommonReply) {}
  rpc Ping(PingRequest) returns (PongResponse) {}
}

message PingRequest {}

message PongResponse {}

message MsgRequest {
  string content = 2;
  string topic = 3;
  string group = 4;
}

message CommonReply {
  string code = 1;
  string message = 2;
}